[package]
name = "gitdown"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
log = "0.4.14"
clap = { version = "3.1.15", features = ["std", "color", "suggestions"] }
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
failure = "0.1.8"

serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

anyhow = "1.0.52"
